# chat-lcb

./: README.md  Run.bat  Train.bat  index.html  pyproject.toml
chroma_db/44705a28-c0aa-44fd-9eb0-5a82b9489348/: index_metadata.pickle
chroma_db/8eba0013-9ec7-4c49-a434-16f10cfb6ba7/: index_metadata.pickle
src/: ingest.py  main.py
